<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/ic_title_home" />
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_menu_world"
            android:title="@string/ic_title_world" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_menu_science"
            android:title="@string/ic_title_science" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_technology"
            android:title="@string/ic_title_environment" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_menu_travel"
            android:title="@string/ic_title_travel" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_menu_sport"
            android:title="@string/ic_title_sport" />
        <item
            android:id="@+id/nav_environment"
            android:icon="@drawable/ic_menu_environment"
            android:title="@string/ic_title_environment" />
        <item
            android:id="@+id/nav_society"
            android:icon="@drawable/ic_menu_society"
            android:title="@string/ic_title_society" />
        <item
            android:id="@+id/nav_fashion"
            android:icon="@drawable/ic_menu_fashion"
            android:title="@string/ic_title_fashion" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_business"
            android:title="@string/ic_title_business" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/ic_menu_culture"
            android:title="@string/ic_title_culture" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_menu_food"
            android:title="@string/ic_title_food" />

        <item
            android:id="@+id/nav_artanddesign"
            android:icon="@drawable/ic_menu_artanddesign"
            android:title="@string/ic_title_art_and_design" />

    </group>
    <item android:title="@string/ic_group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/contact_us" />
        </menu>


    </item>

</menu>